# CUDA-max-cut

./: CMakeLists.txt  README.md  build.sh  graph.cpp  graph.h  max_cut.cpp  max_cut.cu  max_cut.h  max_cut_kernel.cu  max_cut_kernel.cuh  test_script.sh
src/: graph.h  max_cut  max_cut.cpp  max_cut.cu  max_cut.h
